# ladestationen-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
.github/workflows/: deutschland_generator.yaml  openapi_check.yaml
python-client/: README.md  pyproject.toml
python-client/.openapi-generator/: FILES
python-client/deutschland/ladestationen/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/ladestationen/api/: default_api.py
python-client/deutschland/ladestationen/model/: __init__.py  geometry.py  quantization_parameter.py  station_overview.py  station_overview_attributes.py  station_overview_features.py  station_overview_fields.py  station_overview_spatial_reference.py  station_overview_transform.py  station_overview_unique_id_field.py
python-client/docs/: DefaultApi.md  QuantizationParameter.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: modules.rst
python-client/test/: test_default_api.py  test_geometry.py  test_quantization_parameter.py  test_station_overview.py  test_station_overview_attributes.py  test_station_overview_features.py  test_station_overview_fields.py  test_station_overview_spatial_reference.py  test_station_overview_transform.py  test_station_overview_unique_id_field.py
